--- a/WifiP2P/app/src/main/AndroidManifest.xml
+++ b/WifiP2P/app/src/main/AndroidManifest.xml
@@ -19,15 +19,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainPanelActivity">
+        <activity android:name=".activity.MainPanelActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ChatActivity" />
-        <activity android:name=".activity.VocalActivity" />
+        <activity android:name=".activity.ChatActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activity.VocalActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
